# NaNoGenMo2025

./: .gitignore  README.md  add_page_breaks.py  moves.txt  novel.md
MoveGenerator/: MoveGenerator.slnx
MoveGenerator/MoveGenerator/: Cfg.cs  Expansion.cs  GrammarRule.cs  MoveGenerator.csproj  Program.cs  extract_moves.py
MoveGenerator/MoveGenerator/Models/: TagSet.cs  Technique.cs  VocabEntry.cs
MoveGenerator/MoveGenerator/data/: adjectives.json  adverbs.json  grammar.json  nouns.json  verbs.json
py_preprocessors/: pyproject.toml
py_preprocessors/src/py_preprocessors/: build_vocabulary.py  lowercase.py  sort_vocabulary.py
py_preprocessors/src/py_preprocessors/input/tags/alignment/: Demonic.txt  Righteous.txt
py_preprocessors/src/py_preprocessors/input/tags/element/: Earth.txt  Fire.txt  Metal.txt  Water.txt  Wood.txt
py_preprocessors/src/py_preprocessors/input/tags/mastery/: Divine.txt
py_preprocessors/src/py_preprocessors/input/tags/skill_type/: Defensive.txt  Evasive.txt  Offensive.txt
py_preprocessors/src/py_preprocessors/input/words/: adjectives.txt  adverbs.txt  nouns.txt  verbs.txt
py_preprocessors/src/py_preprocessors/output/: nouns.json  verbs.json
