[project]
name = "py-preprocessors"
version = "0.1.0"
description = ""
authors = [{name = "Philip Barcelon"}]
readme = "README.md"
requires-python = "=3.13.2"
dependencies = ["numpy (>=2.3.5,<3.0.0)", "spacy (>=3.8.11,<4.0.0)", "nltk (>=3.9.2,<4.0.0)"]

[tool.poetry]
packages = [{include = "py_preprocessors", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
